--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ div{
 	margin: 0 auto;
 	margin-bottom: 50px;
 	padding:40px;
-  width:370px;
-	height:550px;
+	width:370px;
+	min-height: 550px;
 	background:white;
-	border:1px solid gray; 
+	border:1px solid gray;
 	}
